fixed spacing added missing content

--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,7 @@ nav a {
   width: 100%;
   display: block;
   padding: .5em .75em;
+  white-space: nowrap;
 }
 
 nav ul {
@@ -63,23 +64,22 @@ nav a:hover {
   }
 }
 
-  @media only screen and (min-width: 38em) {
+@media only screen and (min-width: 38em) {
 
-    html {
-    font-size: 110%
+  html {
+    font-size: 110%;
     line-height: 1.4;
-    }
-
-    nav li {
-      width: 25%;
-    }
   }
 
+  nav li {
+    width: 25%;
+  }
+}
 
 @media only screen and (min-width: 60em) {
 
   html {
-    font-size: 120%
+    font-size: 120%;
     line-height: 1.5;
   }
 
@@ -94,9 +94,9 @@ nav a:hover {
   }
 }
 
-  @media only screen and (min-width: 90em) {
+@media only screen and (min-width: 90em) {
 
-    html {
-      font-size: 130%;
-    }
+  html {
+    font-size: 130%;
   }
+}
